--- a/package.json
+++ b/package.json
@@ -1,44 +1,52 @@
 {
-  "name": "indoorjs",
-  "version": "1.0.19",
-  "description": "Canvas based indoor maps",
-  "main": "dist/indoor.js",
+  "name": "fabric-layers-react",
+  "version": "1.0.0",
+  "description": "A fabric.js coordinate-plane (grid) & layers library for React",
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
+  "unpkg": "dist/index.umd.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "docs": "node ./build/docs.js",
     "pretest": "npm run lint && npm run lint-spec",
     "test": "npm run test-nolint",
     "test-nolint": "karma start ./spec/karma.conf.js",
     "start": "webpack-dev-server --mode development --open",
-    "build": "npm run rollup && npm run uglify",
-    "release": "./build/publish.sh",
+    "build": "npm run build:cjs && npm run build:esm && npm run build:umd",
+    "build:cjs": "rollup -c build/rollup-config.js --format=cjs --file=dist/index.js",
+    "build:esm": "rollup -c build/rollup-config.js --format=esm --file=dist/index.esm.js",
+    "build:umd": "rollup -c build/rollup-config.js --format=umd --file=dist/index.umd.js",
+    "release": "npm run build && npm publish",
     "lint": "eslint src",
     "lint-spec": "eslint spec/suites",
     "lintfix": "eslint src --fix; eslint spec/suites --fix;",
     "rollup": "rollup -c build/rollup-config.js",
     "lib": "webpack",
     "watch": "rollup -w -c build/rollup-watch-config.js",
-    "uglify": "uglifyjs dist/indoor.js -c -m -o dist/indoor.min.js --source-map filename=dist/indoor.min.js.map --in-source-map dist/indoor.js.map --source-map-url indoor.js.map --comments",
+    "uglify": "uglifyjs dist/index.umd.js -c -m -o dist/index.umd.min.js --source-map filename=dist/index.umd.min.js.map --source-map-url index.umd.js.map --comments",
     "integrity": "node ./build/integrity.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mudin/indoorjs.git"
+    "url": "git+https://github.com/ajoslin103/fabric-layers-react.git"
   },
   "keywords": [
-    "indoorjs",
-    "maps",
-    "indoor-map",
+    "fabric.js",
     "canvas",
     "grid",
-    "axis",
-    "polar",
-    "cartesian"
+    "coordinate-plane",
+    "layers",
+    "react",
+    "cartesian",
+    "polar"
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mudin/indoorjs/issues"
+    "url": "https://github.com/ajoslin103/fabric-layers-react/issues"
   },
-  "homepage": "https://github.com/mudin/indoorjs#readme",
+  "homepage": "https://github.com/ajoslin103/fabric-layers-react#readme",
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.4",
@@ -81,7 +89,9 @@
     "yargs": "^10.0.3"
   },
   "dependencies": {
-    "eventemitter2": "^5.0.1",
+    "eventemitter2": "^5.0.1"
+  },
+  "peerDependencies": {
     "fabric-pure-browser": "^3.4.0",
     "react": "^17.0.2"
   },
