--- a/package.json
+++ b/package.json
@@ -12,18 +12,17 @@
   ],
   "scripts": {
     "docs": "node ./build/docs.js",
-    "pretest": "npm run lint && npm run lint-spec",
-    "test": "npm run test-nolint",
-    "test-nolint": "karma start ./spec/karma.conf.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "start": "webpack-dev-server --mode development --open",
     "build": "npm run build:cjs && npm run build:esm && npm run build:umd",
     "build:cjs": "rollup -c build/rollup-config.js --format=cjs --file=dist/index.js",
     "build:esm": "rollup -c build/rollup-config.js --format=esm --file=dist/index.esm.js",
     "build:umd": "rollup -c build/rollup-config.js --format=umd --file=dist/index.umd.js",
-    "release": "npm run build && npm publish",
+    "release": "npm run test && npm run build && npm publish",
     "lint": "eslint src",
-    "lint-spec": "eslint spec/suites",
-    "lintfix": "eslint src --fix; eslint spec/suites --fix;",
+    "lintfix": "eslint src --fix",
     "rollup": "rollup -c build/rollup-config.js",
     "lib": "webpack",
     "watch": "rollup -w -c build/rollup-watch-config.js",
@@ -54,6 +53,8 @@
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@babel/register": "^7.4.4",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^13.4.0",
     "acorn": "^6.1.1",
     "babel-eslint": "^8.0.3",
     "babel-loader": "^8.0.6",
@@ -71,6 +72,8 @@
     "eslint-plugin-prettier": "^3.1.0",
     "git-rev-sync": "^1.12.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.0-beta.3",
     "jsdom": "11.11.0",
     "jsdom-global": "3.0.2",
     "mocha": "^4.0.1",
