Pre-publishing Checklist

--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "start": "webpack-dev-server --mode development --open",
-    "build": "npm run build:cjs && npm run build:esm && npm run build:umd",
-    "build:cjs": "rollup -c build/rollup-config.js --format=cjs --file=dist/index.js",
-    "build:esm": "rollup -c build/rollup-config.js --format=esm --file=dist/index.esm.js",
-    "build:umd": "rollup -c build/rollup-config.js --format=umd --file=dist/index.umd.js",
+    "build": "rollup -c build/rollup-config.js",
+    "build:cjs": "rollup -c build/rollup-config.js --environment BUILD:cjs",
+    "build:esm": "rollup -c build/rollup-config.js --environment BUILD:esm",
+    "build:umd": "rollup -c build/rollup-config.js --environment BUILD:umd",
     "release": "npm run test && npm run build && npm publish",
     "lint": "eslint src",
     "lintfix": "eslint src --fix",
@@ -51,6 +51,8 @@
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.4",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@babel/register": "^7.4.4",
     "@testing-library/jest-dom": "^6.6.3",
