--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,7 @@
     ["@babel/preset-env", {
       "modules": false,
       "targets": {
-        "browsers": ["last 2 versions", "ie >= 11"]
+        "browsers": ["last 2 versions", "not dead", "not ie 11"]
       }
     }]
   ],
