--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "fabric-layers-react",
   "version": "1.0.0",
+  "type": "module",
   "description": "A fabric.js coordinate-plane (grid) & layers library for React",
-  "main": "dist/index.js",
-  "module": "dist/index.esm.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
   "unpkg": "dist/index.umd.js",
   "types": "types/index.d.ts",
   "files": [
@@ -12,9 +13,9 @@
   ],
   "scripts": {
     "docs": "node ./build/docs.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "test": "jest --config=jest.config.json",
+    "test:watch": "jest --watch --config=jest.config.json",
+    "test:coverage": "jest --coverage --config=jest.config.json",
     "start": "webpack-dev-server --mode development --open",
     "build": "rollup -c build/rollup-config.js",
     "build:cjs": "rollup -c build/rollup-config.js --environment BUILD:cjs",
@@ -49,58 +50,59 @@
   },
   "homepage": "https://github.com/ajoslin103/fabric-layers-react#readme",
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.4",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
-    "@babel/register": "^7.4.4",
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.7",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/preset-env": "^7.23.8",
+    "@babel/register": "^7.23.7",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^13.4.0",
-    "acorn": "^6.1.1",
-    "babel-eslint": "^8.0.3",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-istanbul": "^5.1.0",
-    "chai": "^4.1.2",
-    "cross-env": "^5.2.0",
-    "css-loader": "^2.1.1",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-prettier": "^4.2.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-prettier": "^3.1.0",
-    "git-rev-sync": "^1.12.0",
-    "html-webpack-plugin": "^3.2.0",
+    "@testing-library/react": "^14.2.1",
+    "acorn": "^8.11.3",
+    "@babel/eslint-parser": "^7.23.3",
+    "babel-loader": "^9.1.3",
+    "babel-plugin-add-module-exports": "^1.0.4",
+    "babel-plugin-istanbul": "^6.1.1",
+    "chai": "^5.1.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.10.0",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-webpack-plugin": "^4.0.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "git-rev-sync": "^3.0.2",
+    "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^30.0.0-beta.3",
-    "jsdom": "11.11.0",
-    "jsdom-global": "3.0.2",
-    "mocha": "^4.0.1",
-    "nyc": "^13.1.0",
-    "prettier": "^1.17.1",
-    "rollup": "^1.12.3",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-git-version": "^0.2.1",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-globals": "^1.4.0",
-    "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^1.2.7",
-    "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.1",
-    "webpack-dev-server": "^3.3.1",
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^22.1.0",
+    "jsdom-global": "^3.0.2",
+    "mocha": "^10.3.0",
+    "nyc": "^15.1.0",
+    "prettier": "^3.2.5",
+    "rollup": "^4.41.1",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^26.0.0",
+    "rollup-plugin-git-version": "^0.3.1",
+    "@rollup/plugin-json": "^6.1.0",
+    "style-loader": "^3.3.4",
+    "terser-webpack-plugin": "^5.3.10",
+    "webpack": "^5.99.9",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4",
     "yargs": "^10.0.3"
   },
   "dependencies": {
-    "eventemitter2": "^5.0.1"
+    "eventemitter2": "^6.4.9",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-globals": "^1.4.0",
+    "rollup-plugin-polyfill-node": "^0.13.0"
   },
   "peerDependencies": {
-    "fabric-pure-browser": "^3.4.0",
-    "react": "^17.0.2"
+    "fabric-pure-browser": "^5.1.0",
+    "react": "^19.1.0"
   },
   "nyc": {
     "sourceMap": false,
