--- a/package.json
+++ b/package.json
@@ -52,14 +52,17 @@
   "devDependencies": {
     "@babel/cli": "^7.23.4",
     "@babel/core": "^7.23.7",
+    "@babel/eslint-parser": "^7.23.3",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "@babel/preset-env": "^7.23.8",
     "@babel/register": "^7.23.7",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^26.0.0",
+    "@rollup/plugin-json": "^6.1.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^14.2.1",
     "acorn": "^8.11.3",
-    "@babel/eslint-parser": "^7.23.3",
     "babel-loader": "^9.1.3",
     "babel-plugin-add-module-exports": "^1.0.4",
     "babel-plugin-istanbul": "^6.1.1",
@@ -69,10 +72,10 @@
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-webpack-plugin": "^4.0.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-webpack-plugin": "^4.0.1",
     "git-rev-sync": "^3.0.2",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
@@ -83,10 +86,7 @@
     "nyc": "^15.1.0",
     "prettier": "^3.2.5",
     "rollup": "^4.41.1",
-    "@rollup/plugin-babel": "^6.0.4",
-    "@rollup/plugin-commonjs": "^26.0.0",
     "rollup-plugin-git-version": "^0.3.1",
-    "@rollup/plugin-json": "^6.1.0",
     "style-loader": "^3.3.4",
     "terser-webpack-plugin": "^5.3.10",
     "webpack": "^5.99.9",
@@ -96,6 +96,7 @@
   },
   "dependencies": {
     "eventemitter2": "^6.4.9",
+    "fabric-layers": "file:../fabric-layers",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-polyfill-node": "^0.13.0"
