--- a/jest.config.json
+++ b/jest.config.json
@@ -2,7 +2,8 @@
   "testEnvironment": "jsdom",
   "moduleNameMapper": {
     "\\.(css|less|scss|sass)$": "identity-obj-proxy",
-    "\\.(jpg|jpeg|png|gif|webp|svg)$": "<rootDir>/__mocks__/fileMock.js"
+    "\\.(jpg|jpeg|png|gif|webp|svg)$": "<rootDir>/__mocks__/fileMock.js",
+    "^fabric-layers$": "<rootDir>/../fabric-layers/src/index.js"
   },
   "setupFilesAfterEnv": ["<rootDir>/test/setupTests.js"],
   "testPathIgnorePatterns": ["/node_modules/", "/dist/"],
