--- a/package.json
+++ b/package.json
@@ -1,44 +1,43 @@
 {
-  "name": "indoorjs",
-  "version": "1.0.19",
-  "description": "Canvas based indoor maps",
-  "main": "dist/indoor.js",
+  "name": "fabric-layers",
+  "version": "1.0.0",
+  "description": "A fabric.js coordinate-plane (grid) & layers library",
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
+  "unpkg": "dist/index.umd.js",
   "scripts": {
     "docs": "node ./build/docs.js",
     "pretest": "npm run lint && npm run lint-spec",
     "test": "npm run test-nolint",
     "test-nolint": "karma start ./spec/karma.conf.js",
     "start": "webpack-dev-server --mode development --open",
-    "build": "npm run rollup && npm run uglify",
+    "build": "rollup -c",
     "release": "./build/publish.sh",
     "lint": "eslint src",
     "lint-spec": "eslint spec/suites",
     "lintfix": "eslint src --fix; eslint spec/suites --fix;",
-    "rollup": "rollup -c build/rollup-config.js",
-    "lib": "webpack",
-    "watch": "rollup -w -c build/rollup-watch-config.js",
-    "uglify": "uglifyjs dist/indoor.js -c -m -o dist/indoor.min.js --source-map filename=dist/indoor.min.js.map --in-source-map dist/indoor.js.map --source-map-url indoor.js.map --comments",
-    "integrity": "node ./build/integrity.js"
+    "dev": "rollup -w -c",
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mudin/indoorjs.git"
+    "url": "git+https://github.com/ajoslin103/fabric-layers.git"
   },
   "keywords": [
-    "indoorjs",
-    "maps",
-    "indoor-map",
+    "fabric.js",
     "canvas",
     "grid",
+    "coordinate-plane",
+    "layers",
     "axis",
     "polar",
     "cartesian"
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mudin/indoorjs/issues"
+    "url": "https://github.com/ajoslin103/fabric-layers/issues"
   },
-  "homepage": "https://github.com/mudin/indoorjs#readme",
+  "homepage": "https://github.com/ajoslin103/fabric-layers#readme",
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.4",
@@ -81,9 +80,10 @@
     "yargs": "^10.0.3"
   },
   "dependencies": {
-    "eventemitter2": "^5.0.1",
-    "fabric-pure-browser": "^3.4.0",
-    "react": "^17.0.2"
+    "eventemitter2": "^5.0.1"
+  },
+  "peerDependencies": {
+    "fabric-pure-browser": "^3.4.0"
   },
   "nyc": {
     "sourceMap": false,
