--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
-  "name": "fabric-layers-react",
+  "name": "fabric-layers",
   "version": "1.0.0",
-  "description": "A fabric.js coordinate-plane (grid) & layers library for React",
-  "main": "dist/index.js",
+  "description": "A fabric.js coordinate-plane (grid) & layers library",
+  "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "unpkg": "dist/index.umd.js",
   "files": [
     "dist"
   ],
+  "browser": {
+    "./dist/index.cjs.js": "./dist/index.umd.js"
+  },
   "scripts": {
-    "docs": "node ./build/docs.js",
-    "pretest": "npm run lint && npm run lint-spec",
-    "test": "npm run test-nolint",
-    "test-nolint": "karma start ./spec/karma.conf.js",
-    "start": "webpack-dev-server --mode development --open",
-    "build": "rollup -c",
-    "release": "./build/publish.sh",
-    "lint": "eslint src",
-    "lint-spec": "eslint spec/suites",
-    "lintfix": "eslint src --fix; eslint spec/suites --fix;",
-    "dev": "rollup -w -c",
-    "prepare": "npm run build"
+    "clean": "rimraf dist",
+    "lint": "eslint . --ext .js,.jsx",
+    "lint:fix": "npm run lint -- --fix",
+    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "test": "cross-env NODE_ENV=test mocha --require @babel/register",
+    "test:watch": "npm test -- --watch",
+    "test:coverage": "cross-env NODE_ENV=test nyc mocha --require @babel/register",
+    "build": "npm run clean && rollup -c",
+    "build:watch": "rollup -c -w",
+    "start": "webpack serve --mode=development --open",
+    "prepublishOnly": "npm run build",
+    "prepare": "npm run build",
+    "release": "standard-version"
   },
   "repository": {
     "type": "git",
@@ -42,48 +46,36 @@
   },
   "homepage": "https://github.com/ajoslin103/fabric-layers#readme",
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
-    "@babel/register": "^7.4.4",
-    "acorn": "^6.1.1",
-    "babel-eslint": "^8.0.3",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-istanbul": "^5.1.0",
-    "chai": "^4.1.2",
-    "cross-env": "^5.2.0",
-    "css-loader": "^2.1.1",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-prettier": "^4.2.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-prettier": "^3.1.0",
-    "git-rev-sync": "^1.12.0",
-    "html-webpack-plugin": "^3.2.0",
-    "jsdom": "11.11.0",
-    "jsdom-global": "3.0.2",
-    "mocha": "^4.0.1",
-    "nyc": "^13.1.0",
-    "prettier": "^1.17.1",
-    "rollup": "^1.12.3",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-git-version": "^0.2.1",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-globals": "^1.4.0",
-    "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^1.2.7",
-    "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.1",
-    "webpack-dev-server": "^3.3.1",
-    "yargs": "^10.0.3"
+    "@babel/cli": "^7.24.5",
+    "@babel/core": "^7.24.5",
+    "@babel/preset-env": "^7.24.5",
+    "@babel/register": "^7.23.9",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "acorn": "^8.11.3",
+    "chai": "^4.4.1",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "jsdom": "^24.0.0",
+    "jsdom-global": "^3.0.2",
+    "mocha": "^10.4.0",
+    "nyc": "^15.1.0",
+    "prettier": "^3.2.5",
+    "rollup": "^4.13.2",
+    "rollup-plugin-terser": "^7.0.2",
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
-    "eventemitter2": "^5.0.1"
+    "eventemitter2": "^6.4.9",
+    "fabric-pure-browser": "^3.4.0"
   },
   "peerDependencies": {
     "fabric-pure-browser": "^3.4.0"
