--- a/package.json
+++ b/package.json
@@ -49,15 +49,15 @@
     "@babel/cli": "^7.24.5",
     "@babel/core": "^7.24.5",
     "@babel/preset-env": "^7.24.5",
-    "@babel/register": "^7.23.9",
-    "@rollup/plugin-babel": "^6.0.3",
+    "@babel/register": "^7.24.5",
+    "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^16.0.1",
     "acorn": "^8.11.3",
-    "chai": "^4.4.1",
+    "chai": "^5.0.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.57.0",
+    "eslint": "^9.0.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
@@ -67,11 +67,11 @@
     "mocha": "^10.4.0",
     "nyc": "^15.1.0",
     "prettier": "^3.2.5",
-    "rollup": "^4.13.2",
-    "rollup-plugin-terser": "^7.0.2",
-    "webpack": "^5.90.3",
+    "rollup": "^4.43.0",
+    "@rollup/plugin-terser": "^0.4.4",
+    "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^5.0.3"
   },
   "dependencies": {
     "eventemitter2": "^6.4.9",
