updates to fix npm install

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "test": "cross-env NODE_ENV=test mocha --require @babel/register",
     "test:watch": "npm test -- --watch",
     "test:coverage": "cross-env NODE_ENV=test nyc mocha --require @babel/register",
-    "build": "npm run clean && rollup -c",
-    "build:watch": "rollup -c -w",
+    "build": "npm run clean && rollup -c rollup.config.mjs",
+    "build:watch": "rollup -c rollup.config.mjs -w",
     "start": "webpack serve --mode=development --open",
     "prepublishOnly": "npm run build",
     "prepare": "npm run build",
@@ -58,7 +58,7 @@
     "chai": "^5.0.0",
     "cross-env": "^7.0.3",
     "eslint": "^9.0.0",
-    "eslint-config-airbnb-base": "^15.0.0",
+
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
