--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
   "author": "",
   "license": "MIT",
   "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0",
     "fabric": "^6.7.0",
-    "fabric-layers": "^1.1.1"
+    "fabric-layers": "^1.1.3",
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
   },
   "peerDependenciesMeta": {
     "fabric": {
