--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fabric-layers-react",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A React wrapper around the fabric-layers (https://www.npmjs.com/package/fabric-layers) library",
   "main": "dist/index.js",
   "module": "dist/esm/index.js",
@@ -44,10 +44,12 @@
   },
   "devDependencies": {
     "@types/fabric": "^5.3.10",
+    "@types/jsdom": "^21.1.7",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^7.1.2",
+    "fabric-layers": "^1.1.3",
     "html-webpack-plugin": "^5.6.3",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
