--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -1,12 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./dist/esm",
-    "module": "esnext",
-    "target": "es6",
-    "moduleResolution": "node",
-    "declaration": true,
-    "declarationDir": "./dist/esm/types"
-  },
-  "include": ["src"]
+    "module": "es2015",
+    "outDir": "./dist/esm"
+  }
 }
