--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc && tsc -p tsconfig.esm.json",
+    "build:types": "tsc --emitDeclarationOnly",
+    "build:webpack": "webpack --config webpack.config.js",
+    "build": "npm run build:types && npm run build:webpack",
     "prepare": "npm run build",
     "example": "cd example && npm install && npm start",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -59,5 +61,9 @@
     "webpack": "^5.99.9",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0"
   }
 }
